remove remaining bootstrap files and fix social icons on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,9 +57,8 @@ body{
   color: #313437;
   background-color: #fff;
   text-align: center;
-  padding: 70px 0;
+  padding: 0px 0px;
   background: rgba(255,255,255,1);
-  padding: 0;
   padding-top: 2.5px;
   margin-left: 30vw;
   border: 1px solid white;
@@ -68,17 +67,11 @@ body{
   margin-top: -11.5vh;
 }
 
-@media (max-width:767px) {
-  .social-icons {
-    padding: 50px 0;
-  }
-}
-
 .social-icons i {
   font-size: 32px;
   display: inline-block;
   color: #757980;
-  margin: 0 10px;
+  margin: 0;
   width: 60px;
   height: 60px;
   border: 0px solid #c8ced7;
@@ -88,9 +81,7 @@ body{
 }
 
 @media (max-width: 400px){
-  .social-icons{
-    width: 100vh;
-    border-radius: 0;
-    position: absolute;
+  body{
+    
   }
 }
